--- a/server/index.html
+++ b/server/index.html
@@ -26,7 +26,7 @@
             <label>Enter Message</label>
             <textarea id="message" class='form-control'></textarea>
             <br />
-            <input type="submit" class='btn btn-primary' value='Send Message'/>
+            <input type="submit" class='btn btn-primary' value='Send Message' />
           </div>
         </form>
       </div>
@@ -47,6 +47,20 @@
         $message.val('')
       })
 
+      socket.on('state', state => {
+        console.log('new message', state)
+        // Render the state information. 
+        state.messages.forEach(message => {
+          $chat.append('<div class="well">' + "message:" + message.text + '</div>')
+        })
+        state.users.forEach(user => {
+          $chat.append('<div class="well">' + "user:" + user.name + '</div>')
+        })
+        state.channels.forEach(channel => {
+          $chat.append('<div class="well">' + "channel:" + channel.name + '</div>')
+        })
+      }
+      )
     })
 
   </script>
