--- a/server/index.html
+++ b/server/index.html
@@ -11,53 +11,107 @@
 </head>
 
 <body>
+  <div class="table-responsive col-md-6">
+    <table>
+      <thead>
+        <tr>
+          <th class="col-md-1">Channel</th>
+          <th class="col-md-2">Channel ID</th>
+        </tr>
+      </thead>
+      <tbody id="channels">
+      </tbody>
+    </table>
+  </div>
+  <div class="table-responsive col-md-1">
+    <table>
+      <thead>
+        <tr>
+          <th class="col-md-1">User</th>
+          <th class="col-md-1">User ID</th>
+        </tr>
+      </thead>
+      <tbody id="users">
+      </tbody>
+    </table>
+  </div>
+  <div class="table-responsive col-md-6">
+    <table>
+      <thead>
+        <tr>
+          <th class="col-md-1">Sender</th>
+          <th class="col-md-2">Channel</th>
+          <th class="col-md-3">Message</th>
+        </tr>
+      </thead>
+      <tbody id="messages">
+      </tbody>
+    </table>
+  </div>
+  <div class="table-responsive col-md-6">
+    <table>
+      <thead>
+        <tr>
+          <th class="col-md-1">Pin</th>
+          <th class="col-md-2">Lat</th>
+          <th class="col-md-3">Long</th>
+        </tr>
+      </thead>
+      <tbody id="maps">
+      </tbody>
+    </table>
+  </div>
+
   <div class='container'>
-    <div class='row'>
-      <div class='col-md-2'>
-        <div class='well'>
-          <h3>Online Users</h3>
-          <ul class='list-group' id '=users'></ul>
+    <div class='col-md-4'>
+      <form id='messageForm'>
+        <div class='form-group'>
+          <label>Enter Message</label>
+          <textarea id="send_message" class='form-control'></textarea>
+          <br />
+          <input type="submit" class='btn btn-primary' value='Send Message' />
         </div>
-      </div>
-      <div class='col-md-4'>
-        <div class='chat' id='chat'></div>
-        <form id='messageForm'>
-          <div class='form-group'>
-            <label>Enter Message</label>
-            <textarea id="message" class='form-control'></textarea>
-            <br />
-            <input type="submit" class='btn btn-primary' value='Send Message' />
-          </div>
-        </form>
-      </div>
+      </form>
     </div>
   </div>
 
   <script>
     $(function () {
       var socket = io.connect()
-      var $messageForm = $('#messageForm')
-      var $message = $('#message')
-      var $message = $('#message')
-      var $chat = $('#chat')
+      const $messageForm = $('#messageForm')
+      const $message = $('#send_message') // send message button
+      const $messages = $('#messages') // messsages table
+      const $chat = $('#chat')
+      const $users = $('#users')
+      const $channels = $('#channels')
+      const $maps = $('#maps')
+      const my_channel_id = "C0G9QKBBL"
+      const my_user_id = "W012A3CDE"
+
 
       $messageForm.submit(e => {
         e.preventDefault()
-        socket.emit('message', $message.val())
+        socket.emit('chat.postmessage', { channel: my_channel_id, user: my_user_id, text: $message.val() })
         $message.val('')
       })
 
       socket.on('state', state => {
-        console.log('new message', state)
         // Render the state information. 
+        $messages.empty()
         state.messages.forEach(message => {
-          $chat.append('<div class="well">' + "message:" + message.text + '</div>')
+          $messages.append(`<tr><td>${message.user}</td><td>${message.channel_id}</td><td>${message.text}</td></tr>`)
         })
+        $users.empty()
         state.users.forEach(user => {
-          $chat.append('<div class="well">' + "user:" + user.name + '</div>')
+          $users.append(`<tr><td>${user.name}</td><td>${user.id}</td></tr>`)
         })
+        $channels.empty()
         state.channels.forEach(channel => {
-          $chat.append('<div class="well">' + "channel:" + channel.name + '</div>')
+          $channels.append(`<tr><td>${channel.name}</td><td>${channel.id}</td></tr>`)
+        })
+        $maps.empty()
+        state.map.markers.forEach(marker => {
+          $maps.append(`<tr><td>${marker.name}</td><td>${marker.location[0]}</td><td>${marker.location[1]}</td></tr>`)
         })
       }
       )
